--- a/mon-pix/app/styles/app.scss
+++ b/mon-pix/app/styles/app.scss
@@ -76,6 +76,7 @@ of an adaptative/mobile-first approach — refactoring is welcome here */
 @import 'components/qcm-solution-panel';
 @import 'components/qcu-proposals';
 @import 'components/qcu-solution-panel';
+@import 'components/qroc-proposals';
 @import 'components/qroc-solution-panel';
 @import 'components/qrocm-solution-panel';
 @import 'components/reached-stage';
