--- a/mon-pix/app/templates/components/scorecard-details.hbs
+++ b/mon-pix/app/templates/components/scorecard-details.hbs
@@ -141,7 +141,11 @@
           {{/if}}
         </div>
         <div class="scorecard-details-reset-modal__warning">
-          <p>{{t 'pages.competence-details.actions.reset.modal.warning'}}</p>
+          <p>{{t 'pages.competence-details.actions.reset.modal.warning.header'}}</p>
+          <ul>
+            <li>{{t 'pages.competence-details.actions.reset.modal.warning.ongoing-assessment'}}</li>
+            <li>{{t 'pages.competence-details.actions.reset.modal.warning.certification'}}</li>
+          </ul>
         </div>
       </div>
 
