Modify page title when the challenge is timed out

--- a/mon-pix/app/templates/assessments/challenge.hbs
+++ b/mon-pix/app/templates/assessments/challenge.hbs
@@ -17,6 +17,7 @@
                 challenge=@model.challenge
                 answer=@model.answer
                 assessment=@model.assessment
+                timedoutChallenge=this.timedoutChallenge
                 answerValidated=(route-action "saveAnswerAndNavigate")
                 resumeAssessment=(route-action "resumeAssessment")
     }}
