Set the default title after validated the challenge

--- a/mon-pix/app/templates/assessments/challenge.hbs
+++ b/mon-pix/app/templates/assessments/challenge.hbs
@@ -17,7 +17,8 @@
                 challenge=@model.challenge
                 answer=@model.answer
                 assessment=@model.assessment
-                timedoutChallenge=this.timedoutChallenge
+                timeoutChallenge=this.timeoutChallenge
+                finishChallenge=this.finishChallenge
                 answerValidated=(route-action "saveAnswerAndNavigate")
                 resumeAssessment=(route-action "resumeAssessment")
     }}
