--- a/mon-pix/app/templates/components/scorecard-details.hbs
+++ b/mon-pix/app/templates/components/scorecard-details.hbs
@@ -120,8 +120,12 @@
   {{/if}}
 </div>
 {{#if this.showResetModal}}
-  <PixModal @containerClass="scorecard-details__reset-modal pix-modal-dialog--wide" @onClickOverlay={{this.closeModal}}>
-    <button class="pix-modal__close-link" type="button" aria-label="{{t 'common.actions.close'}}" {{on 'click' this.closeModal}}>
+  <PixModal
+          @containerClass="scorecard-details__reset-modal pix-modal-dialog--wide"
+          @onClickOverlay={{this.closeModal}}
+          @originId="#reset-button"
+          role="dialog">
+    <button id="pix-modal__close-button" class="pix-modal__close-link" type="button" aria-label="{{t 'common.actions.close'}}" {{on 'click' this.closeModal}}>
       <span>{{t 'common.actions.close'}}</span>
       <FaIcon @icon="times-circle" class="logged-user-menu__icon"></FaIcon>
     </button>
