[CLEANUP] Modify title of competence page to have the name first

--- a/mon-pix/app/templates/competences.hbs
+++ b/mon-pix/app/templates/competences.hbs
@@ -1,4 +1,3 @@
-{{!-- template-lint-disable no-implicit-this  --}}
-{{page-title model.name}}
+{{page-title (t 'pages.competence-details.title')}}
 
 {{outlet}}
