[APP] Send id of button than show modal to the modal to return to it

--- a/mon-pix/app/templates/components/comparison-window.hbs
+++ b/mon-pix/app/templates/components/comparison-window.hbs
@@ -1,6 +1,7 @@
 <PixModal
         @class="comparison-window-modal"
         @onClickOverlay={{@closeComparisonWindow}}
+        @originId="#button-comparision-answer-{{@answer.id}}"
         role="dialog">
 
   <button type="button" id="pix-modal__close-button" class="pix-modal__close-link" aria-label={{t "common.actions.close"}} {{on "click" @closeComparisonWindow}}>
