--- a/mon-pix/app/templates/components/qrocm-dep-solution-panel.hbs
+++ b/mon-pix/app/templates/components/qrocm-dep-solution-panel.hbs
@@ -1,29 +1,38 @@
-{{!-- template-lint-disable no-triple-curlies --}}
 <div class="qrocm-solution-panel rounded-panel">
   <div class="rounded-panel__row correction-qrocm__text">
-    {{#each this.inputFields as |field|}}
-      {{{field.label}}}
+    {{#each this.blocks as |block|}}
+      {{#if block.text}}
+        <MarkdownToHtml @markdown={{block.text}}
+                        @extensions="remove-paragraph-tags"
+                        class="correction-qrocm-text__label" />
+      {{/if}}
 
-      {{#if (eq @challenge.format 'paragraphe')}}
-        <textarea class="correction-qrocm__answer correction-qrocm__answer--paragraph {{field.inputClass}}"
-                  rows="5"
-                  value="{{field.answer}}"
-                  id="{{field.label}}"
-                  disabled>
-        </textarea>
-      {{else if (eq @challenge.format 'phrase')}}
-        <input value="{{field.answer}}"
-               class="correction-qrocm__answer correction-qrocm__answer--sentence {{field.inputClass}}"
-               id="{{field.label}}"
-               disabled>
-      {{else}}
-        <div class="correction-qrocm__answer-wrapper">
-          <input value="{{field.answer}}"
-                 size="{{get-qroc-input-size @challenge.format}}"
-                 class="correction-qrocm__answer correction-qrocm__answer--input {{field.inputClass}}"
-                 id="{{field.label}}"
+      {{#if block.input}}
+        {{#if (eq @challenge.format 'paragraphe')}}
+          <textarea class="correction-qrocm__answer correction-qrocm__answer--paragraph {{block.inputClass}}"
+                    rows="5"
+                    value="{{block.answer}}"
+                    id="{{block.input}}"
+                    disabled>
+          </textarea>
+        {{else if (eq @challenge.format 'phrase')}}
+          <input value="{{block.answer}}"
+                 class="correction-qrocm__answer correction-qrocm__answer--sentence {{block.inputClass}}"
+                 id="{{block.input}}"
                  disabled>
-        </div>
+        {{else}}
+          <div class="correction-qrocm__answer-wrapper">
+            <input value="{{block.answer}}"
+                   size="{{get-qroc-input-size @challenge.format}}"
+                   class="correction-qrocm__answer correction-qrocm__answer--input {{block.inputClass}}"
+                   id="{{block.input}}"
+                   disabled>
+          </div>
+        {{/if}}
+      {{/if}}
+
+      {{#if block.breakline}}
+        <br>
       {{/if}}
     {{/each}}
     {{#unless this.answerIsCorrect}}
