--- a/mon-pix/app/templates/components/campaign-skill-review-competence-result.hbs
+++ b/mon-pix/app/templates/components/campaign-skill-review-competence-result.hbs
@@ -11,7 +11,7 @@
     {{#each @partnerCompetenceResults as |partnerCompetence|}}
       <tr aria-label="{{t "pages.skill-review.details.result-by-skill"}}">
         <th scope="row">
-          <span class="skill-review-competence__bullet skill-review-competence__bullet--{{partnerCompetence.areaColor}}" aria-hidden="true">&#8226;</span>
+          <span class="skill-review-competence__border skill-review-competence__border--{{partnerCompetence.areaColor}}" aria-hidden="true"></span>
           <span>{{partnerCompetence.name}}</span>
         </th>
         <td>
@@ -26,7 +26,7 @@
     {{#each @competenceResults as |competence|}}
       <tr aria-label="{{t "pages.skill-review.details.result-by-skill"}}">
         <th scope="row">
-          <span class="skill-review-competence__bullet skill-review-competence__bullet--{{competence.areaColor}}" aria-hidden="true">&#8226;</span>
+          <span class="skill-review-competence__border skill-review-competence__border--{{competence.areaColor}}" aria-hidden="true"></span>
           <span>{{competence.name}}</span>
         </th>
         <td>
